# vector-sandbox

./: .env.example  .gitignore  .mise.toml  AGENT_OPTIMIZATIONS.md  CLAUDE.md  Makefile  Oops.rej  README.md  batch_test_output.txt  batch_test_output_v2.txt  batch_test_output_v3.txt  batch_test_results.json  build.sh  docker-compose.yml  eslint.config.js  generated_database.ts  index.html  manage.py  mypy.ini  package-lock.json  package.json  prospector.yml  pyproject.toml  render.yaml  requirements.txt  run_test_syntax.py  tailwind.config.js  test_codegen_batch.py  test_design_compliance.py  test_error_fix_diff.py  test_implementation.py  test_planning_script.py  test_planning_service.py  test_schema_extraction.py  test_syntax_fix_diff.py  test_ts_generation.py  test_ts_simple.py  test_typescript_output.py  test_typescript_standalone.py  test_validation_service.py  (+1 more)
.claude/: settings.local.json
.cursor/: style.md
.cursor/plans/: diff-based_surgical_edits_89bef33b.plan.md
.cursor/rules/: calling-llms.mdc  style.mdc
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.devcontainer/scripts/: post-attach.sh  post-create.sh  post-start.sh  set-ports-public.sh
.github/workflows/: claude-build-app.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
accounts/: admin.py  types.py
accounts/views/: __init__.py
apps/: admin.py  apps.py  models.py  types.py
apps/action_classification/: __init__.py
apps/backend/: .env.example  Makefile  README.md  build.sh  conftest.py  start.sh  test_implementation.py  test_planning_script.py  (+1 more)
audit/: types.py
chat/: admin.py  models.py  types.py
data_store/: __init__.py  models.py
docs/: ARCHITECTURE_ALIGNMENT.md  ARCHITECTURE_SUMMARY.md  keycloak-render-setup.md
hooks/: pre-push
integrations/: __init__.py  types.py
internal_apps/: settings.py  urls.py  wsgi.py
relay_app/: apps.py  models.py  permissions.py  tasks.py  urls.py
requirements/: static.txt
scripts/: check_static.sh  dev.sh  dev_login.py  setup_localdev.sh  test_data_store_e2e.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
tests/: integration_test_background_gen.py  test_background_generation.py  test_background_generation_edge_cases.py  test_compilation_autofix.py  test_diff_utils.py  test_execution_scope_classifier.py  test_organization_logo_api.py  test_planning_step_order.py
vector_app/: apps.py  models.py  permissions.py  shared.py  tasks.py  urls.py
(+548 files in other folders)
